# CodeGraph

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  install.sh
.github/workflows/: ci.yml  release.yml
action/: action.yml
crates/codegraph-cli/: Cargo.toml  build.rs
crates/codegraph-cli/src/: audit.rs  configcmd.rs  cypher.rs  index.rs  init.rs  main.rs  query.rs  registry.rs  scipcmd.rs  tsconfig.rs  viz.rs  viz_template.html
crates/codegraph-cli/tests/: cli_contract.rs  config_lossless.rs  golden.rs  import_atomicity.rs  import_freshness_config.rs  mcp_freshness.rs  mcp_payload.rs  release_consistency.rs  review_correctness.rs
crates/codegraph-cli/tests/fixtures/bash/: a.sh  expected.edges
crates/codegraph-cli/tests/fixtures/c/: a.c  b.c  expected.edges
crates/codegraph-cli/tests/fixtures/cpp/: a.cpp  expected.edges
crates/codegraph-cli/tests/fixtures/csharp/: A.cs  expected.edges
crates/codegraph-cli/tests/fixtures/go/: a.go  b.go  expected.edges
crates/codegraph-cli/tests/fixtures/go/sub/: o.go
crates/codegraph-cli/tests/fixtures/java/: A.java  expected.edges
crates/codegraph-cli/tests/fixtures/javascript/: app.js  decoy.js  expected.edges  util.js
crates/codegraph-cli/tests/fixtures/kotlin/: Repo.kt  expected.edges
crates/codegraph-cli/tests/fixtures/python/: b.py  expected.edges
crates/codegraph-cli/tests/fixtures/python/pkg/: a.py
crates/codegraph-cli/tests/fixtures/ruby/: a.rb  expected.edges
crates/codegraph-cli/tests/fixtures/rust/: a.rs  b.rs  expected.edges
crates/codegraph-cli/tests/fixtures/swift/: A.swift  expected.edges
crates/codegraph-cli/tests/fixtures/typescript/: expected.edges
crates/codegraph-cli/tests/fixtures/typescript/decoy/: dup.ts
crates/codegraph-cli/tests/fixtures/typescript/src/: View.tsx  lib.ts  main.ts  svc.ts
crates/codegraph-core/: Cargo.toml
crates/codegraph-core/src/: config.rs  lib.rs  llm.rs  types.rs
crates/codegraph-embed/: Cargo.toml
crates/codegraph-embed/src/: lib.rs
crates/codegraph-graph/: Cargo.toml
crates/codegraph-graph/src/: lib.rs
crates/codegraph-indexstore/: Cargo.toml  build.rs
crates/codegraph-indexstore/src/: lib.rs  macos.rs
crates/codegraph-ingest/: Cargo.toml
crates/codegraph-ingest/src/: lib.rs
crates/codegraph-llm/: Cargo.toml
crates/codegraph-llm/src/: lib.rs
crates/codegraph-mcp/: Cargo.toml
crates/codegraph-mcp/src/: lib.rs
crates/codegraph-parse/: Cargo.toml
crates/codegraph-parse/src/: lib.rs
crates/codegraph-query/: Cargo.toml
crates/codegraph-query/src/: lib.rs
crates/codegraph-resolve/: Cargo.toml
crates/codegraph-resolve/src/: lib.rs
crates/codegraph-services/: Cargo.toml
crates/codegraph-services/src/: lib.rs
crates/codegraph-store/: Cargo.toml
crates/codegraph-store/src/: cypher.rs  lib.rs
docs/: BENCHMARK.md  INCREMENTAL.md  LSP-TIER-DESIGN.md  RESOLUTION.md  STORAGE.md
docs/plans/: 2026-07-01-competitive-roadmap.md  2026-07-02-killer-moves.md
docs/plans/2026-06-29-codegraph-superiority/: plan.md  rnd-findings-batch2.json  rnd-findings.json
graphify-out/: recall-overloads-generics-findings.md
scripts/: benchmark.py  context_eval.py  release-qa.sh
scripts/eval/: README.md  eval_results.json  gen_ground_truth.py  repos.toml  run_eval.py
scripts/eval/questions/: fastapi.jsonl  zod.jsonl
