[package]
name = "codegraph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codegraph"
path = "src/main.rs"

[dependencies]
codegraph-core.workspace = true
codegraph-store.workspace = true
codegraph-graph.workspace = true
codegraph-parse.workspace = true
codegraph-mcp.workspace = true
codegraph-llm.workspace = true
codegraph-ingest.workspace = true
codegraph-resolve.workspace = true
codegraph-indexstore = { workspace = true, optional = true }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit = "0.22"
walkdir.workspace = true
ignore.workspace = true
rayon.workspace = true
sha2.workspace = true
zstd.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
media = ["codegraph-ingest/media"]
local-embed = ["codegraph-llm/local-embed"]  # bundled bge-small-en-v1.5 (no server)
indexstore = ["dep:codegraph-indexstore", "codegraph-indexstore/link"]  # opt-in Swift compiler-grade tier (macOS)
