[package]
name = "codegraph-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codegraph-core.workspace = true
reqwest.workspace = true
serde_json.workspace = true
fastembed = { version = "4", optional = true }

[features]
local-embed = ["dep:fastembed"]
