[package]
name = "codegraph-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codegraph-core.workspace = true
codegraph-store.workspace = true
codegraph-graph.workspace = true
codegraph-llm.workspace = true
rmcp = { workspace = true, features = ["server", "macros", "transport-io"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
notify = "8"
codegraph-services = { version = "1.38.0", path = "../codegraph-services" }

[dev-dependencies]
tempfile.workspace = true
