[package]
name = "codegraph-parse"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codegraph-core.workspace = true
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
